--- a/ulc/src/package.json
+++ b/ulc/src/package.json
@@ -13,7 +13,8 @@
     "@mantine/core": "^6.0.0",
     "@mantine/hooks": "^6.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
