--- a/ulc/src/package.json
+++ b/ulc/src/package.json
@@ -13,6 +13,7 @@
     "@mantine/core": "^6.0.0",
     "@mantine/hooks": "^6.0.0",
     "react": "^18.2.0",
+    "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5"
   },
