--- a/ulc/src/package.json
+++ b/ulc/src/package.json
@@ -21,6 +21,7 @@
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.1.0",
+    "tailwindcss": "^3.3.5",
     "typescript": "^4.6.4",
     "vite": "^3.1.0"
   }
