--- a/.github/workflows/build-ui.yml
+++ b/.github/workflows/build-ui.yml
@@ -38,6 +38,7 @@ jobs:
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
+          cd ulc
           git add html/
           git commit -m "Deploy build output" || echo "No changes to commit"
           git push origin main
